--- a/mapsapp/templates/mapsapp/login.html
+++ b/mapsapp/templates/mapsapp/login.html
@@ -31,6 +31,9 @@
         <div class="form-group">
             <a href="{% url 'register' %}">Click here to register</a>
         </div>
+        <div class="form-group">
+            <a href="{% url 'password_reset' %}">Forgot your password?</a>
+        </div>
     </form>
 </div>
 {% endblock %}
