--- a/mapsapp/templates/mapsapp/collections.html
+++ b/mapsapp/templates/mapsapp/collections.html
@@ -1,13 +1,14 @@
 {% extends "mapsapp/base.html" %}
+{% load static %}
 
 {% block pagetitle%} – Map Collections{% endblock %}
 {% block subtitle %}
-<h4 class="text-center">Map Collections</h4>
+<h4 class="text-center"><img src="{% static 'mapsapp/images/maps.svg' %}" style="height:1.1em;"/> Map Collections</h4>
 {% endblock %}
 
 {% block content %}
     <div class="col-md-6 offset-md-3">
-        <ul>
+        <ul class="mapslist">
             {% for collection in collections %}
             <li><a href="{% url 'collection' collection_id=collection.uuid %}">{{collection.name}} <small>(by {{collection.authors}})</small></a></li>
             {% endfor %}
