--- a/mapsapp/templates/mapsapp/mymaps.html
+++ b/mapsapp/templates/mapsapp/mymaps.html
@@ -1,7 +1,8 @@
 {% extends "mapsapp/base.html" %}
+{% load static %}
 
 {% block subtitle %}
-    <h4 class="text-center">My maps</h4>
+    <h4 class="text-center"><img src="{% static 'mapsapp/images/map.svg' %}" style="height:1em;"/> My maps</h4>
     <hr>
 {% endblock %}
 
@@ -9,10 +10,10 @@
 {% block content %}
     <div class="col-md-6 offset-md-3">
         {% if rmss %}
-            <ul>
+            <ul class="maplist">
                 {% for rms in rmss %}
                     <li><a href="{% url 'map' rms_id=rms.uuid %}">{{ rms.name }}
-                        <small>(by {{ rms.authors }})</small>
+                        <small>{% if rms.version %}{{ rms.version }} {% endif %}(by {{ rms.authors }})</small>
                     </a> – <a href="{% url 'editmap' rms_id=rms.uuid %}">edit</a></li>
                 {% endfor %}
             </ul>
