--- a/mapsapp/templates/mapsapp/newmap.html
+++ b/mapsapp/templates/mapsapp/newmap.html
@@ -70,7 +70,8 @@
         </form>
     </div>
 {% endblock %}
-{% block additionaljs %}
+{% block js %}
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="{% static 'mapsapp/js/tagsinput.js' %}"></script>
     <script type="text/javascript">
         $('#id_tags').tagsinput();
