--- a/mapsapp/templates/mapsapp/search.html
+++ b/mapsapp/templates/mapsapp/search.html
@@ -1,9 +1,13 @@
 {% extends "mapsapp/base.html" %}
+{% load static %}
 {% block subtitle %}
-<h4 class="text-center">Search results for ›{{term}}‹</h4>
-<hr>
+    <h4 class="text-center">Search results for ›{{ term }}‹</h4>
 {% endblock %}
 {% block content %}
-<div class="maps row">
-</div>
+    <div class="maps row">
+    </div>
+{% endblock %}
+
+{% block js %}
+    {% include 'mapsapp/maps_js_block.html' %}
 {% endblock %}
