--- a/mapsapp/templates/mapsapp/tags.html
+++ b/mapsapp/templates/mapsapp/tags.html
@@ -19,3 +19,7 @@
     <div class="maps row">
     </div>
 {% endblock %}
+
+{% block js %}
+    {% include 'mapsapp/maps_js_block.html' %}
+{% endblock %}
