--- a/mapsapp/templates/mapsapp/index.html
+++ b/mapsapp/templates/mapsapp/index.html
@@ -1,1 +1,14 @@
 {% extends "mapsapp/base.html" %}
+{% load static %}
+
+{% block subtitle %}
+    <div class="text-center"><em>Welcome!
+        aoe2map.net is a place to share your random map scripts (rms) for Age of Empires II.
+        {% if not request.user.is_authenticated %}
+            <a href="{% url 'login' %}">Login</a> to upload a new rms file.
+        {% endif %}</em></div>
+{% endblock %}
+
+{% block js %}
+    {% include 'mapsapp/maps_js_block.html' %}
+{% endblock %}
