--- a/mapsapp/templates/mapsapp/map.html
+++ b/mapsapp/templates/mapsapp/map.html
@@ -1,8 +1,13 @@
 {% extends "mapsapp/base.html" %}
+{% load static %}
 
 {% block content %}
-<div class="maps row">
-    <div class="col-lg-4 col-md-3"></div>
+    <div class="maps row">
+        <div class="col-lg-4 col-md-3"></div>
 
-</div>
+    </div>
+{% endblock %}
+
+{% block js %}
+    {% include 'mapsapp/maps_js_block.html' %}
 {% endblock %}
