--- a/mapsapp/templates/mapsapp/base.html
+++ b/mapsapp/templates/mapsapp/base.html
@@ -32,6 +32,9 @@
         <li class="nav-item">
             <a class="nav-link" href="{% url 'mappack' %}">Mappack Creator</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'info' %}">Info</a>
+        </li>
         {% if not request.user.is_authenticated %}
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'login' %}">Login</a>
