Add list of RMS editors

--- a/mapsapp/templates/mapsapp/info.html
+++ b/mapsapp/templates/mapsapp/info.html
@@ -7,6 +7,7 @@
 
 {% block content %}
     <div class="col-md-8 offset-md-2">
+
         <h5>Features</h5>
 
         <p>Without an account on this site, you can:</p>
@@ -48,6 +49,7 @@
             <li>Add and remove an email address to/from your profile</li>
             <li>Have a password reset link sent to you by email (only if your profile contains an email address)</li>
         </ul>
+
 
         <h5>How To Play Random Map Scripts</h5>
 
@@ -91,6 +93,7 @@
             <li>Location: <i>(your map script)</i></li>
         </ul>
 
+
         <h5>Wololo Kingdoms</h5>
 
         <p>Play the HD expansions on Voobly with the Wololo Kingdoms mod! You must own the expansions on Steam in order
@@ -104,6 +107,27 @@
         <ul>
             <li><a href="http://aok.heavengames.com/cgi-bin/forums/display.cgi?action=st&fn=28&tn=42485&st=0#post0"
                    target="_blank">Look at this handy collection of guides</a></li>
+        </ul>
+
+        <p>Of course you can create and edit your <code>.rms</code> files with Notepad, but that is no fun. There are
+            plugins for various editors that provide, to varying degree and quality, syntax highlighting, syntax
+            checking and code completion.</p>
+
+        <ul>
+            <li>RMS Plugins for
+                <a href="https://marketplace.visualstudio.com/items?itemName=deltaidea.aoe2-rms" target="_blank">Visual
+                    Studio Code</a> and <a href="https://github.com/mangudai" target="_blank">Sublime Text</a> by
+                Mangudai
+            </li>
+            <li>RMS Plugin for <a href="http://savas.co.uk/2015/rms-syntax-support-for-notepad-udl/" target="_blank">Notepad++</a>
+                by Savas
+            </li>
+            <li>RMS Plugin for
+                <a href="https://plugins.jetbrains.com/plugin/10628-rms-plugin" target="_blank">IntelliJ</a> by HSZemi
+            </li>
+            <li>Also check out the <a href="https://mangudai.github.io/" target="_blank">RMS Online Playground</a> by
+                Mangudai!
+            </li>
         </ul>
 
 
