--- a/mapsapp/templates/registration/password_reset_email.html
+++ b/mapsapp/templates/registration/password_reset_email.html
@@ -2,7 +2,7 @@
 To initiate the password reset process for your {{ user.get_username }} aoe2map Account,
 click the link below:
 
-{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
+{{ django_top_url }}{% url 'password_reset_confirm' uidb64=uid token=token %}
 
 If clicking the link above doesn't work, please copy and paste the URL in a new browser
 window instead.
