Reformat Info page

--- a/mapsapp/templates/mapsapp/info.html
+++ b/mapsapp/templates/mapsapp/info.html
@@ -8,149 +8,169 @@
 {% block content %}
     <div class="col-md-8 offset-md-2">
 
-        <h5>Features</h5>
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Features</h5>
+                <p class="card-text">Without an account on this site, you can:</p>
 
-        <p>Without an account on this site, you can:</p>
+                <ul>
+                    <li>Read this very informative page</li>
+                    <li>Browse and download maps (<code>.rms</code> files)</li>
+                    <li>Browse
+                        <del>and download</del>
+                        <span class="badge badge-pill badge-secondary">soon™</span> map collections
+                    </li>
+                    <li>Search for maps or authors by name</li>
+                    <li>Use the Mappack Creator to create mappacks (a mappack is a single <code>.rms</code> file that
+                        generates one of multiple maps randomly with approximately equal probability)
+                    </li>
+                </ul>
 
-        <ul>
-            <li>Read this very informative page</li>
-            <li>Browse and download maps (<code>.rms</code> files)</li>
-            <li>Browse
-                <del>and download</del>
-                <span class="badge badge-pill badge-secondary">soon™</span> map collections
-            </li>
-            <li>Search for maps or authors by name</li>
-            <li>Use the Mappack Creator to create mappacks (a mappack is a single <code>.rms</code> file that generates
-                one of
-                multiple maps randomly with approximately equal probability)
-            </li>
-        </ul>
+                <p class="card-text">When you create an account on this site and login, you can additionally:</p>
 
-        <p>When you create an account on this site and login, you can additionally:</p>
+                <ul>
+                    <li>Upload maps with descriptions and metadata, image(s), and tags, as well as the info which game
+                        versions the map works with
+                    </li>
+                    <li>Edit the information of your maps</li>
+                    <li>Upload new versions of your maps (the old map will display a link to the newer version, while
+                        all collections will directly include the new map)
+                    </li>
+                    <li>
+                        <del>Create map collections</del>
+                        <span class="badge badge-pill badge-secondary">soon™</span>
+                    </li>
+                    <li>
+                        <del>Edit your map collections</del>
+                        <span class="badge badge-pill badge-secondary">soon™</span>
+                    </li>
+                    <li>Log in and log out</li>
+                    <li>Change your password</li>
+                    <li>Add and remove an email address to/from your profile</li>
+                    <li>Have a password reset link sent to you by email (only if your profile contains an email
+                        address)
+                    </li>
+                </ul>
+            </div>
+        </div>
 
-        <ul>
-            <li>Upload maps with descriptions and metadata, image(s), and tags, as well as the info which game versions
-                the map works with
-            </li>
-            <li>Edit the information of your maps</li>
-            <li>Upload new versions of your maps (the old map will display a link to the newer version, while all
-                collections will directly include the new map)
-            </li>
-            <li>
-                <del>Create map collections</del>
-                <span class="badge badge-pill badge-secondary">soon™</span>
-            </li>
-            <li>
-                <del>Edit your map collections</del>
-                <span class="badge badge-pill badge-secondary">soon™</span>
-            </li>
-            <li>Log in and log out</li>
-            <li>Change your password</li>
-            <li>Add and remove an email address to/from your profile</li>
-            <li>Have a password reset link sent to you by email (only if your profile contains an email address)</li>
-        </ul>
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">How To Play Random Map Scripts</h5>
+                <p class="card-text">Depending on the version you use, save the <code>.rms</code> files you can download
+                    from this site in the following folder:</p>
 
+                <dl class="list-group list-group-flush">
+                    <dt>HD</dt>
+                    <dd>
+                        <code>C:\Program Files
+                            (x86)\Steam\steamapps\common\Age2HD\resources\_common\random-map-scripts</code>
+                    </dd>
+                    <dt>HD+Voobly
+                        <small>(using the <a href="http://aoccs.net/" target="_blank">Compatibility Patch</a>)</small>
+                    </dt>
+                    <dd>
+                        <code>C:\Program Files (x86)\Steam\steamapps\common\Age2HD\Random</code>
+                    </dd>
+                    <dt>HD/Voobly/Wololo Kingdoms</dt>
+                    <dd>
+                        <code>C:\Program Files (x86)\Steam\steamapps\common\Age2HD\Voobly Mods\AOC\Data
+                            Mods\WololoKingdoms\Script.Rm</code>
+                    </dd>
+                    <dt>AoC</dt>
+                    <dd>
+                        <code>C:\Program Files (x86)\Microsoft Games\Age of Empires II\Random</code>
+                    </dd>
+                    <dt>AoC/Voobly/Wololo Kingdoms</dt>
+                    <dd>
+                        <code>C:\Program Files (x86)\Microsoft Games\Age of Empires II\Voobly Mods\AOC\Data
+                            Mods\WololoKingdoms\Script.Rm</code>
+                    </dd>
+                </dl>
 
-        <h5>How To Play Random Map Scripts</h5>
+                <p class="card-text">If you happen to have installed Steam / Age of Empires II into a different folder,
+                    adjust the paths accordingly. </p>
 
-        <p>Depending on the version you use, save the <code>.rms</code> files you can download from this site in the
-            following folder:</p>
+                <p class="card-text">In the game, select the following:</p>
+                <ul>
+                    <li>Game: Random Map</li>
+                    <li>Map Style: Custom</li>
+                    <li>Location: <i>(your map script)</i></li>
+                </ul>
 
-        <dl>
-            <dt>HD</dt>
-            <dd>
-                <code>C:\Program Files (x86)\Steam\steamapps\common\Age2HD\resources\_common\random-map-scripts</code>
-            </dd>
-            <dt>HD+Voobly
-                <small>(using the <a href="http://aoccs.net/" target="_blank">Compatibility Patch</a>)</small>
-            </dt>
-            <dd>
-                <code>C:\Program Files (x86)\Steam\steamapps\common\Age2HD\Random</code>
-            </dd>
-            <dt>HD/Voobly/Wololo Kingdoms</dt>
-            <dd>
-                <code>C:\Program Files (x86)\Steam\steamapps\common\Age2HD\Voobly Mods\AOC\Data
-                    Mods\WololoKingdoms\Script.Rm</code>
-            </dd>
-            <dt>AoC</dt>
-            <dd>
-                <code>C:\Program Files (x86)\Microsoft Games\Age of Empires II\Random</code>
-            </dd>
-            <dt>AoC/Voobly/Wololo Kingdoms</dt>
-            <dd>
-                <code>C:\Program Files (x86)\Microsoft Games\Age of Empires II\Voobly Mods\AOC\Data
-                    Mods\WololoKingdoms\Script.Rm</code>
-            </dd>
-        </dl>
+            </div>
+        </div>
 
-        <p>If you happen to have installed Steam / Age of Empires II into a different folder, adjust the paths
-            accordingly. </p>
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Wololo Kingdoms</h5>
+                <p class="card-text">Play the HD expansions on Voobly with the Wololo Kingdoms mod! You must own the
+                    expansions on Steam in order to play with Wololo Kingdoms.</p>
+                <a href="https://github.com/AoE2CommunityGitHub/WololoKingdoms/releases" class="card-link">Download
+                    Wololo Kingdoms from GitHub.</a>
+            </div>
+        </div>
 
-        <p>In the game, select the following:</p>
-        <ul>
-            <li>Game: Random Map</li>
-            <li>Map Style: Custom</li>
-            <li>Location: <i>(your map script)</i></li>
-        </ul>
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">How To Create Random Map Scripts</h5>
+                <p class="card-text">
+                    <a href="http://aok.heavengames.com/cgi-bin/forums/display.cgi?action=st&fn=28&tn=42485&st=0#post0"
+                       target="_blank">Look at this handy collection of guides</a>
+                </p>
+                <p class="card-text">Of course you can create and edit your <code>.rms</code> files with Notepad, but
+                    that is no fun. There are plugins for various editors that provide, to varying degree and quality,
+                    syntax highlighting, syntax checking and code completion.</p>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">RMS Plugins for
+                    <a href="https://marketplace.visualstudio.com/items?itemName=deltaidea.aoe2-rms" target="_blank">Visual
+                        Studio Code</a>
+                    and <a href="https://github.com/mangudai" target="_blank">Sublime Text</a>
+                    by Mangudai
+                </li>
+                <li class="list-group-item">RMS Plugin for
+                    <a href="http://savas.co.uk/2015/rms-syntax-support-for-notepad-udl/" target="_blank">Notepad++</a>
+                    by Savas
+                </li>
+                <li class="list-group-item">RMS Plugin for
+                    <a href="https://plugins.jetbrains.com/plugin/10628-rms-plugin" target="_blank">IntelliJ</a>
+                    by HSZemi
+                </li>
+                <li class="list-group-item">Also check out the
+                    <a href="https://mangudai.github.io/" target="_blank">RMS Online Playground</a>
+                    by Mangudai!
+                </li>
+            </ul>
+        </div>
 
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">ZR Maps</h5>
+                <p class="card-text">ZR stands for "Zip Random" – a ZR map is a zip file that contains a random map
+                    script, a scenario file, and optionally additional resources. ZR maps cannot be edited directly with
+                    a text editor like regular rms files. Instead, they must be extracted, their contents can then be
+                    edited separately, and can then be combined again in a zip file. These zip files must not compress
+                    their contents but rather store them.</p>
 
-        <h5>Wololo Kingdoms</h5>
+                <p class="card-text">ZR maps only work with
+                    <a href="https://userpatch.aiscripters.net/" target="_blank">User Patch 1.5</a>. The "real world"
+                    maps in the game however use the same technique.</p>
 
-        <p>Play the HD expansions on Voobly with the Wololo Kingdoms mod! You must own the expansions on Steam in order
-            to play with Wololo Kingdoms.</p>
-        <p><a href="https://github.com/AoE2CommunityGitHub/WololoKingdoms/releases" target="_blank">Download Wololo
-            Kingdoms from GitHub.</a></p>
+                <p class="card-text">ZR maps allow for fixed terrain and optionally fixed player positions, while
+                    handling the resource distribution in the rms script. It is also possible to override graphics
+                    resources, for example to give a specific terrain a new look. Triggers however (like in custom
+                    scenarios) do not work with ZR maps.</p>
+            </div>
+        </div>
 
-
-        <h5>How To Create Random Map Scripts</h5>
-
-        <ul>
-            <li><a href="http://aok.heavengames.com/cgi-bin/forums/display.cgi?action=st&fn=28&tn=42485&st=0#post0"
-                   target="_blank">Look at this handy collection of guides</a></li>
-        </ul>
-
-        <p>Of course you can create and edit your <code>.rms</code> files with Notepad, but that is no fun. There are
-            plugins for various editors that provide, to varying degree and quality, syntax highlighting, syntax
-            checking and code completion.</p>
-
-        <ul>
-            <li>RMS Plugins for
-                <a href="https://marketplace.visualstudio.com/items?itemName=deltaidea.aoe2-rms" target="_blank">Visual
-                    Studio Code</a> and <a href="https://github.com/mangudai" target="_blank">Sublime Text</a> by
-                Mangudai
-            </li>
-            <li>RMS Plugin for <a href="http://savas.co.uk/2015/rms-syntax-support-for-notepad-udl/" target="_blank">Notepad++</a>
-                by Savas
-            </li>
-            <li>RMS Plugin for
-                <a href="https://plugins.jetbrains.com/plugin/10628-rms-plugin" target="_blank">IntelliJ</a> by HSZemi
-            </li>
-            <li>Also check out the <a href="https://mangudai.github.io/" target="_blank">RMS Online Playground</a> by
-                Mangudai!
-            </li>
-        </ul>
-
-
-        <h5>ZR Maps</h5>
-
-        <p>ZR stands for "Zip Random" – a ZR map is a zip file that contains a random map script, a scenario file, and
-            optionally additional resources. ZR maps cannot be edited directly with a text editor like regular rms
-            files. Instead, they must be extracted, their contents can then be edited separately, and can then be
-            combined again in a zip file. These zip files must not compress their contents but rather store them.</p>
-
-        <p>ZR maps only work with <a href="https://userpatch.aiscripters.net/" target="_blank">User Patch 1.5</a>. The
-            "real world" maps in the game however use the same technique.</p>
-
-        <p>ZR maps allow for fixed terrain and optionally fixed player positions, while handling the resource
-            distribution in the rms script. It is also possible to override graphics resources, for example to give a
-            specific terrain a new look. Triggers however (like in custom scenarios) do not work with ZR maps.</p>
-
-
-        <h5>How To Create Full Map Screenshots</h5>
-
-        <p>Press <code>Ctrl+F12</code> ingame. This only works in the original / Voobly version. It does <em>not</em>
-            work in the HD version, sadly.</p>
-
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">How To Create Full Map Screenshots</h5>
+                <p class="card-text">Press <code>Ctrl+F12</code> ingame. This only works in the original / Voobly
+                    version. It does <em>not</em> work in the HD version, sadly.</p>
+            </div>
+        </div>
 
     </div>
 {% endblock %}
