--- a/mapsapp/templates/mapsapp/info.html
+++ b/mapsapp/templates/mapsapp/info.html
@@ -16,10 +16,7 @@
                 <ul>
                     <li>Read this very informative page</li>
                     <li>Browse and download maps (<code>.rms</code> files)</li>
-                    <li>Browse
-                        <del>and download</del>
-                        <span class="badge badge-pill badge-secondary">soon™</span> map collections
-                    </li>
+                    <li>Browse and download map collections</li>
                     <li>Search for maps or authors by name</li>
                     <li>Use the Mappack Creator to create mappacks (a mappack is a single <code>.rms</code> file that
                         generates one of multiple maps randomly with approximately equal probability)
