fixup! Add typeahead to tag input

--- a/mapsapp/templates/mapsapp/newmap.html
+++ b/mapsapp/templates/mapsapp/newmap.html
@@ -77,7 +77,7 @@
     <script type="text/javascript">
         var tagnames = new Bloodhound({
             datumTokenizer: function (n) {
-                return n.split(/,/)
+                return n.name.split(/,/)
             },
             queryTokenizer: function (n) {
                 return n.split(/,/)
