--- a/mapsapp/templates/mapsapp/editmap.html
+++ b/mapsapp/templates/mapsapp/editmap.html
@@ -66,9 +66,36 @@
         </form>
     </div>
 {% endblock %}
-{% block additionaljs %}
+{% block js %}
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="{% static 'mapsapp/js/tagsinput.js' %}"></script>
+    <script src="{% static 'mapsapp/js/typeahead.bundle.js' %}"></script>
     <script type="text/javascript">
-        $('#id_tags').tagsinput();
+        var tagnames = new Bloodhound({
+            datumTokenizer: function (n) {
+                return n.name.split(/,/);
+            },
+            queryTokenizer: function (n) {
+                return n.split(/,/);
+            },
+            prefetch: {
+                url: '{% url 'api:alltags' %}',
+                filter: function (list) {
+                    return $.map(list.tags, function (tagname) {
+                        return {name: tagname};
+                    });
+                }
+            }
+        });
+        tagnames.initialize();
+        $('#id_tags').tagsinput({
+            "maxTags": 8,
+            typeaheadjs: {
+                name: 'tagnames',
+                displayKey: 'name',
+                valueKey: 'name',
+                source: tagnames.ttAdapter()
+            }
+        });
     </script>
 {% endblock %}
