--- a/mapsapp/templates/mapsapp/base.html
+++ b/mapsapp/templates/mapsapp/base.html
@@ -59,6 +59,12 @@
                 <a class="nav-link" href="{% url 'newmap' %}">New Map</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="{% url 'mycollections' %}">My Collections</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'newcollection' %}">New Collection</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="{% url 'settings' %}">Settings</a>
             </li>
             <li class="nav-item">
