--- a/mapsapp/templates/mapsapp/editcollection.html
+++ b/mapsapp/templates/mapsapp/editcollection.html
@@ -63,5 +63,19 @@
 
             <button type="submit" class="btn btn-primary">Save</button>
         </form>
+    <div style="padding-bottom: 5rem;"></div>
     </div>
+{% endblock %}
+
+{% block js %}
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="{% static 'mapsapp/js/tagsinput.js' %}"></script>
+    <script src="{% static 'mapsapp/js/typeahead.bundle.js' %}"></script>
+    <script type="text/javascript">
+        var MAPS_PREFETCH_URL = "{% url 'api:mapsbyname' %}";
+        var MAPS_URL = "{% url 'api:mapsbyname' searchstring='QUERY' %}";
+        var UUID_TO_MAP_NAME_URL = "{% url 'api:namebyid' rms_id='00000000-0000-0000-0000-000000000000' %}";
+    </script>
+    <script src="{% static 'mapsapp/js/maps.js' %}"></script>
+
 {% endblock %}
